build html structure

--- a/index.html
+++ b/index.html
@@ -7,10 +7,33 @@
     <title>CockPit</title>
 </head>
 <body>
+    <!-- top part with windows -->
     <header>
+        <ul>
+            <li> 
+                <!-- some buttons with lights  -->
+            </li>
+        </ul>
+        <section> 
+            <!-- windows -->
+            <article>
+                <!-- window wiper -->
+            </article>
+            <article>
+                <!-- window wiper -->
+            </article>
+        </section>
     </header>
     <main>
-
+        <section>
+            <article>
+                <!-- here comes the buttons and stuff -->
+            </article>
+        </section>
     </main>
+    <footer>
+        <input type="range" min="-50" max="50" value="0">
+        <input type="range" min="-50" max="50" value="0">
+    </footer>
 </body>
 </html>
