made windows and switch panel

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
         <ul>
             <li> 
                 <!-- some buttons with lights  -->
+                O
+            </li>
+            <li> 
+                <!-- some buttons with lights  -->
+                O
+            </li>
+            <li> 
+                <!-- some buttons with lights  -->
+                O
             </li>
         </ul>
         <section> 
