Add reflection SVG and update window styling

--- a/index.html
+++ b/index.html
@@ -4,45 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
-    <title>CockPit</title>
+    <title>CockPitBox</title>
 </head>
 <body>
-    <!-- top part with windows -->
-    <header>
-        <ul>
-            <li> 
-                <!-- some buttons with lights  -->
-                O
-            </li>
-            <li> 
-                <!-- some buttons with lights  -->
-                O
-            </li>
-            <li> 
-                <!-- some buttons with lights  -->
-                O
-            </li>
-        </ul>
-        <section> 
-            <!-- windows -->
-            <article>
-                <!-- window wiper -->
-            </article>
-            <article>
-                <!-- window wiper -->
-            </article>
-        </section>
-    </header>
     <main>
         <section>
+            <!-- window -->
+            <article></article>
+            <!-- plate  -->
             <article>
-                <!-- here comes the buttons and stuff -->
+                
             </article>
         </section>
     </main>
-    <footer>
-        <input type="range" min="-50" max="50" value="0">
-        <input type="range" min="-50" max="50" value="0">
-    </footer>
 </body>
 </html>
