fix screws and plate bg

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
             <!-- window -->
             <article></article>
             <!-- plate  -->
-            <article>
-                
+            <article class="test">
+                <img src="./assets/screw.svg" alt="">
+                <img src="./assets/screw.svg" alt="">
+                <img src="./assets/screw.svg" alt="">
+                <img src="./assets/screw.svg" alt="">            
             </article>
         </section>
     </main>
