Add radar sensor and toggle switch

--- a/index.html
+++ b/index.html
@@ -12,11 +12,21 @@
             <!-- window -->
             <article></article>
             <!-- plate  -->
-            <article class="test">
+            <article>
                 <img src="./assets/screw.svg" alt="">
                 <img src="./assets/screw.svg" alt="">
                 <img src="./assets/screw.svg" alt="">
-                <img src="./assets/screw.svg" alt="">            
+                <img src="./assets/screw.svg" alt="">  
+                
+                <section>
+                    <div></div>
+                </section>
+            </article>
+            <article>
+                <label>
+                    <input type="checkbox">
+                </label>
+                <div></div>
             </article>
         </section>
     </main>
