add window wipers

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <main>
         <section>
             <!-- window -->
-            <article></article>
+            <article>
+                <img src="./assets/wiperLeft.svg" alt="">
+                <img src="./assets/wiper.svg" alt="">
+            </article>
             <!-- plate  -->
             <article>
                 <img src="./assets/screw.svg" alt="">
