Add steering wheel SVG and update styles for slider and switch

--- a/index.html
+++ b/index.html
@@ -20,15 +20,22 @@
                 <img src="./assets/screw.svg" alt="">
                 <img src="./assets/screw.svg" alt="">
                 <img src="./assets/screw.svg" alt="">  
-                
+                <!-- radar -->
                 <section>
                     <div></div>
                 </section>
             </article>
             <article>
                 <label>
+                    <input type="range">
+                </label>
+            </article>
+            <article>
+                <!-- switch -->
+                <label>
                     <input type="checkbox">
                 </label>
+                <!-- LED -->
                 <div></div>
             </article>
         </section>
