Add range input for direction and script.js file

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </article>
             <article>
                 <label>
-                    <input type="range">
+                    <input type="range" min="0" max="100" value="50" name="direction">
                 </label>
             </article>
             <article>
@@ -40,5 +40,6 @@
             </article>
         </section>
     </main>
+    <script src="/script.js"></script>
 </body>
 </html>
