nested css and made style queries

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <article>
                 <!-- switch -->
                 <label>
-                    <input type="checkbox">
+                    <input type="checkbox" value="switch">
                 </label>
                 <!-- LED -->
                 <div></div>
