Update settings.json and script.js files

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <img src="./assets/screw.svg" alt="">  
                 <!-- radar -->
                 <section>
-                    <div id="radar"></div>
+                    <div></div>
                 </section>
             </article>
             <article>
