moved images, added fonts

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
         <section>
             <!-- window -->
             <article>
-                <img src="./assets/wiperLeft.svg" alt="">
-                <img src="./assets/wiper.svg" alt="">
+                <img src="./assets/images/wiperLeft.svg" alt="">
+                <img src="./assets/images/wiper.svg" alt="">
             </article>
             <!-- plate  -->
             <article>
-                <img src="./assets/screw.svg" alt="">
-                <img src="./assets/screw.svg" alt="">
-                <img src="./assets/screw.svg" alt="">
-                <img src="./assets/screw.svg" alt="">  
+                <img src="./assets/images/screw.svg" alt="">
+                <img src="./assets/images/screw.svg" alt="">
+                <img src="./assets/images/screw.svg" alt="">
+                <img src="./assets/images/screw.svg" alt="">  
                 <!-- radar -->
                 <section>
                     <div></div>
