added darkmode checkbox function

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 <body>
     <main>
         <section>
+            <article>
+                <div>
+                    <h1>Pocket Pit N-97</h1>
+                </div>
+                <div>
+                    <label>
+                        <input type="checkbox" value="darkmode">
+                    </label>
+                </div>
+            </article>
             <!-- window -->
             <article>
                 <img src="./assets/images/wiperLeft.svg" alt="">
@@ -33,7 +43,7 @@
             <article>
                 <!-- switch -->
                 <label>
-                    <input type="checkbox" value="switch">
+                    <input type="checkbox" value="wipers">
                 </label>
                 <!-- LED -->
                 <div></div>
