added gif, reduced motion and cleaned code

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
                 </div>
                 <div>
                     <label>
+                        <span>🌙</span>
                         <input type="checkbox" value="darkmode">
                     </label>
+                    <div></div>
                 </div>
             </article>
             <!-- window -->
