--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <main>
         <section>
+            <!-- title and dark mode -->
             <article>
                 <div>
                     <h1>Pocket Pit N-97</h1>
