--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
             </article>
         </section>
     </main>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
